Tweak the layout of the person area (center less hackily, set overflow: auto, make a little wider.) Far from perfect, but no longer entirely broken.

--- a/dumbhippo/trunk/server/web/css/chatwindow-iefixes.css
+++ b/dumbhippo/trunk/server/web/css/chatwindow-iefixes.css
@@ -1,3 +1,20 @@
 @CHARSET "UTF-8";
 
 @import "sitewide-lt-ie7.css";
+
+/* IE-specific centering hack for the person name; could be
+ * done CSS compliant using display: table and display: table-cell
+ */
+.dh-chat-person-name
+{
+	position: absolute;
+	top: 50%;
+}
+
+.dh-chat-person-name-inner
+{
+	position: relative;
+	top: -50%;
+	padding: 5px;
+}
+
